# markitdown

./: MarkItDown.command  README.md  README.txt  pyproject.toml
server/: server.py
web/: app.js  index.html  style.css
