[project]
name = "markitdown-desktop"
version = "0.1.0"
description = "Local macOS app: drag-and-drop file → Markdown converter (wraps Microsoft markitdown)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "markitdown[pdf,docx,pptx,xlsx,outlook]>=0.1.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.10",
]

[tool.uv]
package = false
